--- a/requirements.txt
+++ b/requirements.txt
@@ -38,6 +38,7 @@ matplotlib-inline==0.1.6
 mdurl==0.1.2
 multidict==6.0.5
 nest-asyncio==1.6.0
+opencv-python==4.9.0.80 
 packaging==23.2
 pandas==2.2.2
 parso==0.8.3
