--- a/requirements.txt
+++ b/requirements.txt
@@ -1,80 +1,4 @@
-﻿aiohttp==3.9.5
-aiosignal==1.3.1
-altair==5.3.0
-asttokens==2.4.1
-async-timeout==4.0.3
-attrs==23.2.0
-blinker==1.8.2
-cachetools==5.3.3
-certifi==2024.7.4
-charset-normalizer==3.3.2
-click==8.1.7
-colorama==0.4.6
-comm==0.2.1
-debugpy==1.8.1
-decorator==5.1.1
-discord==2.3.2
-discord.py==2.4.0
-distlib==0.3.8
-exceptiongroup==1.2.0
-executing==2.0.1
-filelock==3.15.4
-frozenlist==1.4.1
-geopandas==1.0.1
-gitdb==4.0.11
-GitPython==3.1.43
-idna==3.7
-ipykernel==6.29.2
-ipython==8.21.0
-jedi==0.19.1
-Jinja2==3.1.4
-jsonschema==4.23.0
-jsonschema-specifications==2023.12.1
-jupyter_client==8.6.0
-jupyter_core==5.7.1
-markdown-it-py==3.0.0
-MarkupSafe==2.1.5
-matplotlib-inline==0.1.6
-mdurl==0.1.2
-multidict==6.0.5
-nest-asyncio==1.6.0
-opencv-python==4.9.0.80 
-packaging==23.2
-pandas==2.2.2
-parso==0.8.3
-pillow==10.4.0
-platformdirs==4.2.0
-plotly==5.22.0
-prompt-toolkit==3.0.43
-protobuf==5.27.2
-psutil==5.9.8
-pure-eval==0.2.2
-pyarrow==16.1.0
-pydeck==0.9.1
-Pygments==2.17.2
-pyogrio==0.9.0
-pyproj==3.6.1
-python-dateutil==2.8.2
-pytz==2024.1
-pyzmq==25.1.2
-referencing==0.35.1
-requests==2.32.3
-rich==13.7.1
-rpds-py==0.19.0
-shapely==2.0.5
-six==1.16.0
-smmap==5.0.1
-stack-data==0.6.3
+numpy==1.23.5
+opencv_python==4.9.0.80
 streamlit==1.36.0
-tenacity==8.5.0
-toml==0.10.2
-toolz==0.12.1
-tornado==6.4
-traitlets==5.14.1
-typing_extensions==4.12.2
-tzdata==2024.1
-urllib3==2.2.2
-virtualenv==20.26.3
-watchdog==4.0.1
-wcwidth==0.2.13
-yarl==1.9.4
+ultralytics==8.2.21
