--- a/requirements.txt
+++ b/requirements.txt
@@ -18,6 +18,7 @@ Jinja2==3.1.4
 jsonschema==4.23.0
 jsonschema-specifications==2023.12.1
 kiwisolver==1.4.7
+lapx==0.5.2
 markdown-it-py==3.0.0
 MarkupSafe==2.1.5
 matplotlib==3.9.2
